# smwWOLtool

./: Cargo.toml  README.md  \
src/: client.rs  machine.rs  main.rs  server.rs  wake_on_lan.rs
