[package]
name = "smwWoLtool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "1.11", features = ["v4", "serde"]}
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
mac_address = "1.1"
local-ip-address = "0.5"
macaddr = {version = "1.0.1", features = ["serde"] }
anyhow = "1.0.94"
